packages/errors/test/__snapshots__/TESTS_DID_NOT_START_FAILED.ansi
[31mThe browser never connected. Something is wrong. The tests cannot run. Aborting...[39m